update password textInput and customautoComplete

--- a/src/components/Box/Box.scss
+++ b/src/components/Box/Box.scss
@@ -4,7 +4,8 @@
 
   .box-title {
     padding: 20px;
-    padding-bottom: 0px;
+    padding-bottom: 5px !important;
+    font-weight: 500;
   }
 
   .box-content {
