--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -4,7 +4,9 @@
   border: 1px solid #333333;
   text-align: center;
   width: auto;
-  height: 40px;
+  height: 36px;
+  font-size: 14px;
+  font-weight: 400;
   opacity: 1;
   transition-duration: 0.3s;
   &.background-green {
@@ -12,18 +14,33 @@
     color: #ffffff;
     border-color: transparent;
     &:hover {
-      background-color: #1BA103;
+      background-color: #1ba103;
     }
   }
   &.border-green {
     color: #138300;
     border: 1px solid #138300;
+    &:hover {
+      color: #1ba103;
+      background-color: #ffffff;
+      border: 1px solid #1ba103;
+    }
+  }
+  &.background-red {
+    background-color: #ff4d4d;
+    color: #ffffff;
+    border-color: transparent;
+    &:hover {
+      background-color: #ff7070;
+    }
   }
   &.border-red {
     color: #ff4d4d;
     border: 1px solid #ff4d4d;
     &:hover {
-      background-color: #e64a191a;
+      color: #ff7070;
+      background-color: #ffffff;
+      border: 1px solid #ff7070;
     }
   }
   .icon-style {
