--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -52,9 +52,9 @@
   &:disabled,
   &:disabled:hover {
     cursor: not-allowed;
-    border-color: #707070;
+    border: 1px solid #D8D7D7;
     background-color: #ffffff;
-    color: #707070;
+    color: #9F9F9F;
     opacity: 1;
   }
 }
