--- a/src/components/ButtonSearch/ButtonSearch.scss
+++ b/src/components/ButtonSearch/ButtonSearch.scss
@@ -2,6 +2,13 @@
   width: 112px;
   height: 34px;
   border-radius: 3px;
+  display: flex;
+  flex-direction: row;
+  border: none;
+  border-color: none;
+  &:focus {
+    border: none;
+  }
   .btn-search {
     border: none;
     height: 100%;
@@ -9,10 +16,13 @@
     width: 78px;
     background-color: #138300;
     color: #ffffff;
+    font-weight: 400;
+    font-size: 14px;
     border-radius: 3px 0px 0px 3px;
-
+    padding: 6px 10px;
     &:hover {
       background-color: #1ba103;
+      color: #ffffff;
     }
   }
 
@@ -22,6 +32,7 @@
     height: 100%;
     width: 34px;
     background-color: #59a84c;
+    padding: 4px 6px 6px;
     border-radius: 0px 3px 3px 0px;
   }
 }
