--- a/src/components/Input/TextInput.module.scss
+++ b/src/components/Input/TextInput.module.scss
@@ -1,4 +1,5 @@
 .TextInput {
+    position: relative;
     input {
         border-radius: 3px;
         height: 32px;
@@ -29,6 +30,20 @@
         &:disabled{
             background-color: #e2e4e7
         }
+
+        &.padding-icon-left{
+            padding-left: 25px;
+        }
+    }
+
+    .icon-left{
+        width: 35px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 0px;
     }
 
 }
