change style btn disable

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -52,9 +52,8 @@
   &:disabled,
   &:disabled:hover {
     cursor: not-allowed;
-    border: 1px solid #D8D7D7;
-    background-color: #ffffff;
-    color: #9F9F9F;
+    background-color: #F2F2F2;
+    color: #707070;
     opacity: 1;
   }
 }
