--- a/src/components/ButtonSearch/ButtonSearch.scss
+++ b/src/components/ButtonSearch/ButtonSearch.scss
@@ -1,6 +1,6 @@
 .button-select-erp {
   width: 112px;
-  height: 32px;
+  height: 32px !important;
   border-radius: 3px;
   display: flex;
   flex-direction: row;
