--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -4,7 +4,7 @@
   border: 1px solid #333333;
   text-align: center;
   width: auto;
-  height: 32px;
+  height: 32px !important;
   font-size: 14px;
   font-weight: 400;
   opacity: 1;
