--- a/src/components/Input/TextInput.module.scss
+++ b/src/components/Input/TextInput.module.scss
@@ -38,7 +38,7 @@
 
     .icon-left{
         width: 35px;
-        height: 100%;
+        height: 32px;
         display: flex;
         align-items: center;
         justify-content: center;
