--- a/src/components/Input/TextInput.module.scss
+++ b/src/components/Input/TextInput.module.scss
@@ -28,7 +28,7 @@
             border-color: red;
         }
         &:disabled{
-            background-color: #e2e4e7
+            background-color: #E3E3E3;
         }
 
         &.padding-icon-left{
