--- a/src/components/CustomSelect/Select.module.scss
+++ b/src/components/CustomSelect/Select.module.scss
@@ -23,8 +23,8 @@
         }
 
         .custom__select__form.react-select__value-container{
-            display: flex;
-            flex-direction: row !important;
+            // display: flex;
+            // flex-direction: row !important;
             flex-wrap: nowrap !important;
         }
     }
