Add icon right of component CustomTextInput

--- a/src/components/Input/TextInput.module.scss
+++ b/src/components/Input/TextInput.module.scss
@@ -45,6 +45,15 @@
         position: absolute;
         top: 0px;
     }
+    .icon-right{
+        width: 35px;
+        height: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        right: 0px;
+    }
 
 }
 
